# cuaterniones

./: CMakeLists.txt  Cuaternion.cpp  Cuaternion.h  README.md  tests.cpp
googletest/: Makefile  cmake_install.cmake
